Added the start of allowing tinker NPCs to actually do tinkering on behalf of the player.
Ironed out a couple of kinks still left in disassembly.

--- a/UD_Tinkering_Bytes.csproj
+++ b/UD_Tinkering_Bytes.csproj
@@ -9,5 +9,10 @@
 	<ItemGroup>
 	  <Folder Include="Textures\" />
 	</ItemGroup>
+	<ItemGroup>
+	  <Reference Include="UD_Blink_Mutation.dll">
+	    <HintPath>..\..\..\ModAssemblies\UD_Blink_Mutation.dll</HintPath>
+	  </Reference>
+	</ItemGroup>
   <Import Project="../Mods.csproj" />
 </Project>
