Moved the VendorActions and associated events to their own library.
Tweaked some of the logic with building/modding items (still not 100%).

--- a/UD_Tinkering_Bytes.csproj
+++ b/UD_Tinkering_Bytes.csproj
@@ -7,7 +7,7 @@
 		<Company />
 	</PropertyGroup>
 	<ItemGroup>
-	  <Folder Include="Textures\" />
+	  <ProjectReference Include="..\UD_Vendor_Actions\UD_Vendor_Actions.csproj" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Reference Include="UD_Blink_Mutation.dll">
