Added a patch for Broken, Rusted, and Shattered, to ignore the value decrease that results from them calculating repair cost.
Put the above patch behind some options.

Put the existing patch to un-invert trade performance scaling for repair cost calculations behind its own option.

Added a preview image.

--- a/manifest.json
+++ b/manifest.json
@@ -10,5 +10,18 @@
     "Dependencies": {
         "UD_Modding_Toolbox": ">=0.0.1",
         "UD_Vendor_Actions": ">=0.0.1"
-    }
+    },
+    "Directories": [
+        {
+            "Paths": [ "/Common/", "/Textures/" ]
+        },
+        {
+            "Path": "/EnableBB14284Patch_RepairInvertedPerformance/",
+            "Option": "Option_UD_Tinkering_Bytes_DisableBB14284Patch_RepairInvertedPerformance == No"
+        },
+        {
+            "Path": "/EnableBB14285Patch_RepairBrokenValue/",
+            "Option": "Option_UD_Tinkering_Bytes_DisableBB14285Patch_RepairBrokenValue == No"
+        }
+    ]
 }
