--- a/UD_Tinkering_Bytes.csproj
+++ b/UD_Tinkering_Bytes.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<AssemblyName>UD_Tinkering_Bytes</AssemblyName>
 		<PackageId>UD_Tinkering_Bytes</PackageId>
 		<Authors>UnderDoug</Authors>
 		<DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences>
-    <Title>UD Tinkering Bytes</Title>
-	</PropertyGroup>
+    <BaseIntermediateOutputPath>.dotnet\obj\</BaseIntermediateOutputPath>
+    <BaseOutputPath>.dotnet\bin\</BaseOutputPath>
+  </PropertyGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\UD_Vendor_Actions\UD_Vendor_Actions.csproj" />
 	</ItemGroup>
